UI: rewrite How It Works section to 4 steps with simplified copy

--- a/ui/index.html
+++ b/ui/index.html
@@ -285,22 +285,27 @@
 
     <section class="how" id="how">
       <h2>How Heretix works</h2>
-      <p>We query the model in a few carefully chosen ways, average its answers, and share the model’s own reasoning. No retrieval, no citations, just what the AI already believes.</p>
+      <p>Heretix isolates what an AI really believes. We ask your claim in precise ways, measure how confident the model is, and explain what shaped its answer.</p>
       <div class="how-grid">
         <div class="how-card">
-          <span>Step 1</span>
+          <span>Step 1 — Ask</span>
           <h3>Ask</h3>
-          <p>You submit a claim. We freeze all runs to GPT‑5’s internal knowledge—no search engines, no external documents.</p>
+          <p>Type any claim.</p>
         </div>
         <div class="how-card">
-          <span>Step 2</span>
-          <h3>Listen</h3>
-          <p>Heretix asks the claim in multiple phrasings to check the model’s prior belief and keep things consistent.</p>
+          <span>Step 2 — Choose a model</span>
+          <h3>Choose a model</h3>
+          <p>Pick which AI you want to examine—each has its own perspective and training.</p>
         </div>
         <div class="how-card">
-          <span>Step 3</span>
+          <span>Step 3 — Add context (optional)</span>
+          <h3>Add context (optional)</h3>
+          <p>Decide whether to keep the model in its own world, or let it pull from the internet for new evidence.</p>
+        </div>
+        <div class="how-card">
+          <span>Step 4 — Understand</span>
           <h3>Understand</h3>
-          <p>We translate the model’s judgement into a probability and a short explanation you can read in seconds.</p>
+          <p>See how confident the model is in your claim, and what drove that confidence—revealing its bias in plain language.</p>
         </div>
       </div>
     </section>
