UI: update Examples section copy (bias/ask again)

--- a/ui/index.html
+++ b/ui/index.html
@@ -322,9 +322,8 @@
         </ul>
       </div>
       <div>
-        <h2>See what the model already believes</h2>
-        <p>Heretix is a window into GPT‑5’s own prior. You can explore fresh claims, revisit past arguments, or sanity‑check a story before sharing it.</p>
-        <p>Want more? Browse a gallery of claims inside the app or run your own instantly—no signup required.</p>
+        <h2>Ask the AI what it really believes</h2>
+        <p>Heretix makes bias visible. Try a short claim, get its confidence, and see how its story changes when you ask again.</p>
         <a class="example-pill" href="#top">Start a claim</a>
       </div>
     </section>
