UI: clarify FAQ percentage meaning (confidence vs. truth, training/bias)

--- a/ui/index.html
+++ b/ui/index.html
@@ -332,7 +332,7 @@
       <h2>Questions people ask</h2>
       <details>
         <summary>What does the percentage mean?</summary>
-        <p>It’s GPT‑5’s probability that the claim is true, using only its internal training knowledge. A low number means the model thinks the claim is likely false.</p>
+        <p>This is how confident the AI is in your claim. It’s not absolute truth—it’s a reflection of what the model believes, shaped by its training and bias.</p>
       </details>
       <details>
         <summary>Does Heretix browse the web with my claim?</summary>
