UI: update FAQ about web browsing (optional Internet Search mode)

--- a/ui/index.html
+++ b/ui/index.html
@@ -336,7 +336,7 @@
       </details>
       <details>
         <summary>Does Heretix browse the web with my claim?</summary>
-        <p>No. The Raw Prior Lens is strictly internal. We don’t fetch external content and we don’t store your claims beyond what’s needed to return the result.</p>
+        <p>Yes—if you choose to. Select Internet Search to let the model pull current information from the web to supplement its reasoning.</p>
       </details>
       <details>
         <summary>Is this politically biased?</summary>
