UI copy: refine Step 2 text in How It Works (choose a model)

--- a/ui/index.html
+++ b/ui/index.html
@@ -295,7 +295,7 @@
         <div class="how-card">
           <span>Step 2 — Choose a model</span>
           <h3>Choose a model</h3>
-          <p>Pick which AI you want to examine—each has its own perspective and training.</p>
+          <p>Pick which AI model you want to examine as each has its own perspective and training.</p>
         </div>
         <div class="how-card">
           <span>Step 3 — Add context (optional)</span>
