UI copy: update Step 4 (Understand) explanation text

--- a/ui/index.html
+++ b/ui/index.html
@@ -305,7 +305,7 @@
         <div class="how-card">
           <span>Step 4 — Understand</span>
           <h3>Understand</h3>
-          <p>See how confident the model is in your claim, and what drove that confidence—revealing its bias in plain language.</p>
+          <p>See how confident the model is in your claim. Inspect the explanation to further understand how the answer was derived.</p>
         </div>
       </div>
     </section>
