UI copy: update Examples section guidance (claim limit, confidence, supporting items)

--- a/ui/index.html
+++ b/ui/index.html
@@ -323,7 +323,7 @@
       </div>
       <div>
         <h2>Ask the AI what it really believes</h2>
-        <p>Heretix makes bias visible. Try a short claim, get its confidence, and see how its story changes when you ask again.</p>
+        <p>Heretix makes bias visible.  Input a claim (maximum 180 characters) and see what the model thinks, how confident the model is in the answer, and what items supported its conclusion</p>
         <a class="example-pill" href="#top">Start a claim</a>
       </div>
     </section>
