UI copy: simplify FAQ web-browsing answer ('Yes—if you choose to' → 'Yes.')

--- a/ui/index.html
+++ b/ui/index.html
@@ -336,7 +336,7 @@
       </details>
       <details>
         <summary>Does Heretix browse the web with my claim?</summary>
-        <p>Yes—if you choose to. Select Internet Search to let the model pull current information from the web to supplement its reasoning.</p>
+        <p>Yes. Select Internet Search to let the model pull current information from the web to supplement its reasoning.</p>
       </details>
       <details>
         <summary>Is this politically biased?</summary>
