UI copy: update political bias FAQ wording ('inspect it and judge for yourself')

--- a/ui/index.html
+++ b/ui/index.html
@@ -340,7 +340,7 @@
       </details>
       <details>
         <summary>Is this politically biased?</summary>
-        <p>We show the model’s belief, not a judgement from us. Heretix reveals consensus the AI already absorbed, so you can inspect it—not reinforce it.</p>
+        <p>We show the model’s belief, not a judgement from us. Heretix reveals consensus the AI already absorbed, so you can inspect it and judge for yourself</p>
       </details>
       
     </section>
