UI copy: clarify web browsing FAQ as user choice with both modes named

--- a/ui/index.html
+++ b/ui/index.html
@@ -336,7 +336,7 @@
       </details>
       <details>
         <summary>Does Heretix browse the web with my claim?</summary>
-        <p>Yes. Select Internet Search to let the model pull current information from the web to supplement its reasoning.</p>
+        <p>Your choice. Select "Internet Search" to let the model pull current information from the web to supplement its reasoning. If you only want to see the output of the model's internal training, select "Internal Knowledge Only".</p>
       </details>
       <details>
         <summary>Is this politically biased?</summary>
