--- a/ui/index.html
+++ b/ui/index.html
@@ -135,8 +135,8 @@
     .how p { color:var(--muted); max-width:640px; margin:0 auto 32px; line-height:1.6; }
     .how-grid { display:grid; gap:22px; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); }
     .how-card { padding:24px; border-radius:14px; border:1px solid rgba(0,255,65,0.2); background:rgba(255,255,255,0.02); box-shadow:0 0 20px rgba(0,255,65,0.08); text-align:left; }
-    .how-card span { display:block; font-size:12px; letter-spacing:2px; text-transform:uppercase; color:rgba(0,255,65,0.8); margin-bottom:10px; }
-    .how-card h3 { margin:0 0 10px; font-size:20px; }
+    .how-card span { display:block; font-size:16px; letter-spacing:2px; text-transform:uppercase; color:var(--bright); font-weight:700; margin-bottom:10px; text-shadow:0 0 10px rgba(0,255,65,0.25); }
+    .how-card h3 { display:none; }
     .how-card p { margin:0; color:var(--muted); line-height:1.6; }
 
     .example-section { display:grid; grid-template-columns:repeat(auto-fit,minmax(300px,1fr)); gap:40px; align-items:center; }
