UI copy: remove '(optional)' from Step 3 label and heading

--- a/ui/index.html
+++ b/ui/index.html
@@ -298,8 +298,8 @@
           <p>Pick which AI model you want to examine as each has its own perspective and training.</p>
         </div>
         <div class="how-card">
-          <span>Step 3 — Add context (optional)</span>
-          <h3>Add context (optional)</h3>
+          <span>Step 3 — Add context</span>
+          <h3>Add context</h3>
           <p>Decide whether to keep the model in its own world, or let it pull from the internet for new evidence.</p>
         </div>
         <div class="how-card">
