--- a/ui/results.html
+++ b/ui/results.html
@@ -82,14 +82,11 @@
           {WHY_ITEMS}
         </ul>
       </div>
-      <div class="card">
-        <h2>{INFO_TITLE}</h2>
-        <p class="note">{INFO_NOTE_A}</p>
-        <p class="note">{INFO_NOTE_B}</p>
-      </div>
     </div>
 
     {RESOLVED_BLOCK}
+
+    {DEEPER_BLOCK}
 
     <details>
       <summary>Advanced details</summary>
