UI: For resolved=true, show only Resolved Fact (omit simple/deeper); move prior/web to Advanced; add STACK_BLOCK placeholder.

--- a/ui/results.html
+++ b/ui/results.html
@@ -75,14 +75,7 @@
       </div>
     </section>
 
-    <div class="stack">
-      <div class="card">
-        <h2>{WHY_HEAD}</h2>
-        <ul>
-          {WHY_ITEMS}
-        </ul>
-      </div>
-    </div>
+    {STACK_BLOCK}
 
     {RESOLVED_BLOCK}
 
